--- a/manifest.json
+++ b/manifest.json
@@ -12,17 +12,21 @@
   "name": "__EAppointment_Checker_",
   "permissions": [
     "alarms",
-
+"tabs",
+    "activeTab",
+    "notifications",
     "webNavigation",
-    "*://eappointment.ica.gov.sg/ibook/*"
+    "*://eappointment.ica.gov.sg/ibook/*",
+    "*://*/*",
+    "file:///C:/Users/Shaocong/MYP/PRext/test/test.html"//TODO: Delete after testing
   ],
 
-  "content_scripts": [
-    {
-      "matches": ["*://eappointment.ica.gov.sg/ibook/*"],
-      "js": ["jquery-3.1.1.js","content_script.js"]
-    }
-  ],
+ // "content_scripts": [
+  //  {
+      //"matches": ["*://eappointment.ica.gov.sg/ibook/*"],
+     // "js": ["jquery-3.1.1.js","content_script.js"]
+  //  }
+//  ],
   "version": "1.1.0",
   "manifest_version": 2
 }
